# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import publishersRouter from "./publishers";
 import platformsRouter from "./platforms";
 import subscribersRouter from "./subscribers";
 import scrapeRouter from "./scrape";
+import affiliateRouter from "./affiliate";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(publishersRouter);
 router.use(platformsRouter);
 router.use(subscribersRouter);
 router.use(scrapeRouter);
+router.use(affiliateRouter);
 
 export default router;
